# Matrix_map

./: CMakeLists.txt  Makefile  README.md  task1.h
Tests/Matrix_test/: Matrix_test.cpp  test
Tests/Parset_test/: Matrix_Rational.txt  Matrix_Rational_wrong_1.txt  Matrix_Rational_wrong_2.txt  Matrix_Rational_wrong_3.txt  Matrix_Rational_wrong_4.txt  Matrix_Rational_wrong_5.txt  Matrix_Rational_wrong_6.txt  Parser_test.cpp  Vector_Rational.txt  Vector_Rational_wrong_1.txt  test
Tests/Proxy_test/: Proxy_test.cpp  test
Tests/Ration_number_test/: Ration_number_test.cpp  test
Tests/Strint_test/: StrInt_test.cpp  test
src/: Exceptions.cpp  Exceptions.hpp  Inputer.cpp  Inputer.hpp  Matrix.cpp  Matrix.hpp  Matrix_Rational.txt  Matrix_coords.cpp  Matrix_coords.hpp  Proxy.cpp  Proxy.hpp  Rational_number.cpp  Rational_number.hpp  Strint.cpp  Strint.hpp  Vector.cpp  Vector.hpp  main.cpp
src/trash/: Makefile  use_new
